<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa">
    <RelativeLayout android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@drawable/title_bg">

        <ImageButton android:id="@+id/home_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/home_btn"/>

        <ImageView android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/title_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_bar"
        android:padding="44dp">
        <TextView android:id="@+id/info_btn_1"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:textColor="#fff"
            android:text="@string/info_text_btn_1"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/info_btn_1"/>

        <TextView android:id="@+id/info_btn_2"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:textColor="#fff"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/info_btn_1"
            android:text="@string/info_text_btn_2"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/info_btn_2"/>

        <TextView android:id="@+id/info_btn_3"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:textColor="#fff"
            android:layout_below="@+id/info_btn_2"
            android:text="@string/info_text_btn_3"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:background="@drawable/info_btn_3"/>

        <TextView android:id="@+id/info_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info_btn_3"
            android:layout_marginTop="25dp"
            android:textColor="#000"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="4dp"
            android:text="@string/info_bottom_msg"/>
    </RelativeLayout>


</RelativeLayout>